--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,24 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+.text-maincolor {
+  color: rgb(78 103 235);
+}
+.border-maincolor {
+  border: 1px solid rgb(78 103 235);
+}
+.bg-maincolor {
+  background-color: rgb(78 103 235);
+}
+.bg-ofwhitecolor {
+  background-color: #f0f4ff;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+/* AnimatedCursor.css */
+
+.cursor-circle {
+  cursor: url(https://uploads.codesandbox.io/uploads/user/b3e56831-8b98-4fee-b941-0e27f39883ab/Ad1_-cursor.png)
+      39 39,
+    auto;
 }
